# crusty

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: config.rs  config_tests.rs  lib.rs  main.rs
src/auth/: mod.rs
src/cli/: mod.rs
src/domain/: error.rs  holding.rs  ledger.rs  mod.rs  party.rs  services.rs  services_tests.rs  user.rs
src/json_api/: mod.rs
tests/: ledger_api.rs
