[package]
name = "crusty"
version = "0.1.0"
edition = "2021"
description = "A minimal Rust CLI for managing Canton Coin (Amulet) on Canton Network"
license = "MIT"
repository = "https://github.com/alex-kooper/crusty"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
oauth2 = "5"
open = "5"
anyhow = "1"
async-trait = "0.1"
derive_more = { version = "2", features = ["as_ref", "constructor", "display", "from"] }
thiserror = "2"
